--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="team_logo_content_desc">team logo</string>
+    <string name="home_logo_content_desc">home team logo</string>
+    <string name="away_logo_content_desc">away team logo</string>
 </resources>
