--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="away_logo_content_desc">away team logo</string>
     <string name="left_button_content_desc">Left Button</string>
     <string name="right_button_content_description">Right button</string>
+    <string name="loading_error_message">Failed to load match data</string>
 </resources>
